src/index.css
@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;


* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html,
body {
  width: 100%;
  overflow-x: hidden;
  scroll-behavior: smooth;
}


.ul-navbar li {
  list-style: none;
  margin: 18px;
  font-size: 1.1rem;
}

.ul-navbar li a {
  text-decoration: none;
  font-weight: 600;
}

.fa-star,
.fa-star-half-stroke {
  color: rgba(255, 255, 0, 0.993);
}

.hide {
  display: none;
}

.show {
  display: flex;
}

.lattePremiumMemberAround {
  justify-items: space-around;
}

.lattePremiumMemberStart {
  justify-items: flex-start;
}

.orderButtonAnimation {
  animation-name: orderButtonAnimation;
  animation-timing-function: ease-in-out;
  animation-iteration-count: infinite;
  animation-duration: 2s;
}

.arrowAnimation {
  animation: bounceReverted 1s infinite;
  rotate: 180deg;
}

@keyframes orderButtonAnimation {
  0% {transform: scale(1);}

  50% {transform: scale(1.05);}

  100% {transform: scale(1);}
}

@keyframes bounceReverted {
  0%, 100% {
    transform: translateY(20%);
    animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
  }
  50% {
    transform: translateY(0);
    animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
  }
}

